# joulupukki-web

./: .gitignore  .packer.yml  .travis.yml  Gruntfile.js  README.rst  bower.json  config.py  giter.py  github  package.json  packer.py  readme.rst  requirements.txt  setup.cfg  setup.py
api/: README.rst  config.py  requirements.txt  setup.cfg  setup.py
api/debian/: changelog  control  copyright  install  rules
api/debian/patches/: 0000_fix_default_config_file  series
api/docs/source/: conf.py
api/joulupukki/api/: __init__.py
api/joulupukki/api/controllers/: root.py
api/joulupukki/api/controllers/v2/: builds.py  download.py  jobs.py  projects.py  users.py  v2.py
api/joulupukki/api/controllers/v3/: auth.py  builds.py  download.py  jobs.py  projects.py  users.py  v3.py
api/joulupukki/api/libs/: github.py
dispatcher/: config.py  requirements.txt  setup.cfg  setup.py
dispatcher/debian/: changelog  control  install
dispatcher/debian/patches/: 0000_fix_default_config_file
dispatcher/joulupukki/dispatcher/: __init__.py  app.py
dispatcher/joulupukki/dispatcher/controllers/: root.py
dispatcher/joulupukki/dispatcher/dispatcher/: dispatcher.py  manager.py  packer.py
dispatcher/joulupukki/dispatcher/lib/: debpacker.py  packer.py
dispatcher/joulupukki/worker/controllers/: stats.py
dispatcher/joulupukki/worker/lib/: rpmpacker.py
worker/: README.rst  config.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
worker/debian/: changelog  control  copyright
worker/debian/patches/: 0000_fix_default_config_file
worker/joulupukki/worker/: __init__.py  app.py
worker/joulupukki/worker/lib/: debpacker.py  logger.py  osxpacker.py  packer.py  queues.py  rpmpacker.py
worker/joulupukki/worker/worker/: builder.py  docker_builder.py  manager.py  osx_builder.py
(+186 files in other folders)
