[metadata]
name = joulupukki.dispatcher
summary = Joulupukki Dispatcher
author = Thibault Cohen
author_email = thibault.cohen@gmail.com
license = GNU Affero General Public License
url = http://www.jlpk.org
description-file =
    README.rst

[files]
packages = joulupukki.dispatcher
data_files =

[entry_points]
console_scripts =
    jlpy-dispatcher = joulupukki.dispatcher:run

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[pbr]
warnerrors = true

[nosetests]
match=^test
where=joulupukki
nocapture=1
cover-package=joulupukki
cover-erase=1
