[metadata]
name = joulupukki.worker
summary = Joulupukki Worker
author = Thibault Cohen
author_email = thibault.cohen@gmail.com
license = GNU Affero General Public License
url = http://www.jlpk.org
description-file =
    README.rst

[files]
packages = joulupukki.worker
data_files =

[entry_points]
console_scripts =
    jlpy-worker = joulupukki.worker:run

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[pbr]
warnerrors = true

[nosetests]
match=^test
where=joulupukki
nocapture=1
cover-package=joulupukki
cover-erase=1
